--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ exportMethods(
              "SEMmodel.S4",
 			"SEMpaths.S4"
              )
+S3method(SEMpaths,default)
+S3method(SEMmodel,default)
 S3method(SEMpaths,sem)
 S3method(SEMpaths,mplus.model)
 S3method(SEMmodel,mplus.model)
@@ -17,7 +19,7 @@ S3method(SEMmodel,msem)
 S3method(SEMpaths,msem)
 S3method(SEMmodel,msemObjectiveML)
 S3method(SEMpaths,msemObjectiveML)
-
+importFrom(MplusAutomation,"readModels")
 importFrom(sem,"sem","standardizedCoefficients")
 importFrom(lavaan,"lavaan","cfa","standardizedSolution", "standardizedsolution", "parameterEstimates", "parameterestimates","inspect")
 importClassesFrom(lavaan,"lavaan")
