--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ exportMethods(
              )
 S3method(SEMpaths,default)
 S3method(SEMmodel,default)
+S3method(SEMpaths,semspec)
+S3method(SEMmodel,semspec)
 S3method(SEMpaths,sem)
 S3method(SEMpaths,mplus.model)
 S3method(SEMmodel,mplus.model)
