--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: drawSEM
 Type: Package
 Title: Path diagrams and visual analysis of various SEM packages' output
-Version: 0.1.0
-Date: 2012-09-11
+Version: 0.1.0-2
+Date: 2012-10-23
 Author: Sacha Epskamp
 Maintainer: Sacha Epskamp <mail@sachaepskamp.com>
 Depends: R (>= 2.15.0)
