--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
-Package: drawSEM
+Package: semPlot
 Type: Package
 Title: Path diagrams and visual analysis of various SEM packages' output
-Version: 0.1.0-6
-Date: 2012-10-25
+Version: 0.2
+Date: 2012-11-01
 Author: Sacha Epskamp
 Maintainer: Sacha Epskamp <mail@sachaepskamp.com>
 Depends: R (>= 2.15.0)
@@ -11,6 +11,6 @@ Suggests: lavaan, sem, MplusAutomation, OpenMx, rpanel
 Imports:  lavaan, sem, MplusAutomation, plyr, methods
 ByteCompile: yes
 Description:  Path diagrams and visual analysis of various SEM packages' output
-URL: https://github.com/SachaEpskamp/drawSEM
+URL: https://github.com/SachaEpskamp/semPlot
 License: GPL-2
 LazyLoad: yes
