Many bugfixes in mplus model, including better error reports for functionality that is not yet included. All mplus user manual examples should now run and at least give a clear warning about why they fail.
Additionaly several bugfixes in color mixing.

Added support for 'principal' and 'princomp' objects.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,11 @@ exportMethods(
              "semPlotModel.S4",
 			"semPaths.S4"
            )
+
+S3method(semPaths,principal)
+S3method(semPlotModel,principal)
+S3method(semPaths,princomp)
+S3method(semPlotModel,princomp)
 S3method(semPaths,loadings)
 S3method(semPaths,factanal)
 S3method(semPlotModel,loadings)
