Added matModel function to specify model using LISREL matrices (endo only).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,5 @@
-export(semPaths,semPaths.S4,semPlotModel,semPlotModel.S4,semPathsGUI,semCors)
+export(semPaths,semPaths.S4,semPlotModel,semPlotModel.S4,semPathsGUI,semCors,matModel)
+
 # export Classes
 exportClasses(
               "semPlotModel"
