Added exogenous model to lisrel model. Exogenity can now be manually overwritten using the exo() and endo() helper functions. Same for manifest/latent using man() and lat().

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,4 @@
-export(semPaths,semPaths.S4,semPlotModel,semPlotModel.S4,semPathsGUI,semCors,matModel)
+export(semPaths,semPaths.S4,semPlotModel,semPlotModel.S4,semPathsGUI,semCors,lisrelModel)
 
 # export Classes
 exportClasses(
