Fixed a bug where thresholds were not detected in Lavaan models.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,7 +33,7 @@ S3method(semPlotModel,msemObjectiveML)
 S3method(semPaths,msemObjectiveML)
 importFrom(MplusAutomation,"readModels")
 importFrom(sem,"sem","standardizedCoefficients")
-importFrom(lavaan,"lavaan","cfa","standardizedSolution", "standardizedsolution", "parameterEstimates", "parameterestimates","inspect")
+importFrom(lavaan,"lavaan","cfa","standardizedSolution", "standardizedsolution", "parameterEstimates", "parameterestimates","inspect","lavaanNames")
 importClassesFrom(lavaan,"lavaan")
 importFrom(stats,"factanal")
 import(plyr)
