--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,4 @@
-export(semPaths,semPaths.S4,semPlotModel,semPlotModel.S4,semPathsGUI,semCors,lisrelModel)
+export(semPaths,semPlotModel,semPlotModel.S4,semPathsGUI,semCors,lisrelModel)
 
 # export Classes
 exportClasses(
@@ -7,30 +7,32 @@ exportClasses(
 
 # export Methods
 exportMethods(
-             "semPlotModel.S4",
-			"semPaths.S4"
+             "semPlotModel.S4"
            )
 
-S3method(semPaths,principal)
+S3method("+",semPlotModel)
+S3method(semPlotModel,list)
+S3method(semPlotModel,lm)
+# S3method(semPaths,principal)
 S3method(semPlotModel,principal)
-S3method(semPaths,princomp)
+# S3method(semPaths,princomp)
 S3method(semPlotModel,princomp)
-S3method(semPaths,loadings)
-S3method(semPaths,factanal)
+# S3method(semPaths,loadings)
+# S3method(semPaths,factanal)
 S3method(semPlotModel,loadings)
 S3method(semPlotModel,factanal)
-S3method(semPaths,default)
+# S3method(semPaths,default)
 S3method(semPlotModel,default)
-S3method(semPaths,semspec)
+# S3method(semPaths,semspec)
 S3method(semPlotModel,semspec)
-S3method(semPaths,sem)
-S3method(semPaths,mplus.model)
+# S3method(semPaths,sem)
+# S3method(semPaths,mplus.model)
 S3method(semPlotModel,mplus.model)
 S3method(semPlotModel,sem)
 S3method(semPlotModel,msem)
-S3method(semPaths,msem)
+# S3method(semPaths,msem)
 S3method(semPlotModel,msemObjectiveML)
-S3method(semPaths,msemObjectiveML)
+# S3method(semPaths,msemObjectiveML)
 importFrom(MplusAutomation,"readModels")
 importFrom(sem,"sem","standardizedCoefficients")
 importFrom(lavaan,"lavaan","cfa","standardizedSolution", "standardizedsolution", "parameterEstimates", "parameterestimates","inspect","lavaanNames")
