igraph functions can now be used in the layout argument.
Added two layout options: "tree2" and "circle2". These call the reingold-tillford algorithm from the igraph package. The roots chosen are, in order of preference: The exogenous manifest intercepts, the exogenous manifest variables, the latent manifest variables, the latent endogenous variables, the endogenous manifest intercepts and lastly the endogenous manifest variable with the most edges.

When computing the layout, edge direction from intercepts (Except those used as root) are reversed. In addition, any edge going to an exogenous manifest variable is reversed.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Maintainer: Sacha Epskamp <mail@sachaepskamp.com>
 Depends: R (>= 2.15.0)
 Depends: qgraph
 Suggests: lavaan, sem, MplusAutomation, OpenMx, rpanel
-Imports:  lavaan, sem, MplusAutomation, plyr, methods, XML
+Imports:  lavaan, sem, MplusAutomation, plyr, methods, XML, igraph
 ByteCompile: yes
 Description:  Path diagrams and visual analysis of various SEM packages' output
 URL: https://github.com/SachaEpskamp/semPlot
