--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,4 @@
-export(semPaths,semPlotModel,semPathsGUI,semCors,lisrelModel)
+export(semPaths,semPlotModel,semCors,lisrelModel,semSyntax)
 
 # export Classes
 exportClasses(
@@ -13,33 +13,27 @@ exportMethods(
 S3method("+",semPlotModel)
 S3method(semPlotModel,list)
 S3method(semPlotModel,lm)
-# S3method(semPaths,principal)
 S3method(semPlotModel,principal)
-# S3method(semPaths,princomp)
 S3method(semPlotModel,princomp)
-# S3method(semPaths,loadings)
-# S3method(semPaths,factanal)
 S3method(semPlotModel,loadings)
+S3method(semPlotModel,lisrel)
 S3method(semPlotModel,factanal)
-# S3method(semPaths,default)
 S3method(semPlotModel,default)
-# S3method(semPaths,semspec)
 S3method(semPlotModel,semspec)
-# S3method(semPaths,sem)
-# S3method(semPaths,mplus.model)
 S3method(semPlotModel,mplus.model)
 S3method(semPlotModel,sem)
 S3method(semPlotModel,msem)
-# S3method(semPaths,msem)
 S3method(semPlotModel,msemObjectiveML)
-# S3method(semPaths,msemObjectiveML)
 importFrom(MplusAutomation,"readModels")
-importFrom(sem,"sem","standardizedCoefficients")
+importFrom(sem,"sem","standardizedCoefficients","specifyModel")
 importFrom(lavaan,"lavaan","cfa","standardizedSolution", "standardizedsolution", "parameterEstimates", "parameterestimates","inspect","lavaanNames")
 importClassesFrom(lavaan,"lavaan")
 importFrom(stats,"factanal")
+importFrom(rockchalk,standardize)
 import(plyr)
+import(lisrelToR)
 import(XML)
 export(semPlotModel.Onyx)
 export(semPlotModel.Amos)
 importFrom(igraph,"layout.reingold.tilford","graph.edgelist")
+export(exo,"exo<-",endo,"endo<-",lat,"lat<-",man,"man<-")
