Added mixCols argument, and 'color' argument can now be assigned a list with colors for manifests, latents and intercepts.
This version has now been sent to CRAN.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,7 @@ S3method(semPlotModel,loadings)
 S3method(semPlotModel,lisrel)
 S3method(semPlotModel,factanal)
 S3method(semPlotModel,default)
-S3method(semPlotModel,semspec)
+# S3method(semPlotModel,semspec)
 S3method(semPlotModel,mplus.model)
 S3method(semPlotModel,sem)
 S3method(semPlotModel,msem)
@@ -33,7 +33,7 @@ importFrom(rockchalk,standardize)
 import(plyr)
 import(lisrelToR)
 import(XML)
-export(semPlotModel.Onyx)
-export(semPlotModel.Amos)
+export(semPlotModel_Onyx)
+export(semPlotModel_Amos)
 importFrom(igraph,"layout.reingold.tilford","graph.edgelist")
 export(exo,"exo<-",endo,"endo<-",lat,"lat<-",man,"man<-")
