Added pastel color option.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,4 +36,5 @@ import(XML)
 export(semPlotModel_Onyx)
 export(semPlotModel_Amos)
 importFrom(igraph,"layout.reingold.tilford","graph.edgelist")
+importFrom(colorspace,rainbow_hcl)
 export(exo,"exo<-",endo,"endo<-",lat,"lat<-",man,"man<-")
