--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Author: Sacha Epskamp
 Maintainer: Sacha Epskamp <mail@sachaepskamp.com>
 Depends: R (>= 2.15.0), qgraph (>= 1.2)
 Suggests: lavaan (>= 0.5-11), sem (>= 3.1-0), MplusAutomation (>= 0.5-3)
-Imports:  lavaan (>= 0.5-11), sem (>= 3.1-0), MplusAutomation (>= 0.5-3), plyr, methods, XML, igraph (>= 0.6-3), lisrelToR, rockchalk
+Imports:  lavaan (>= 0.5-11), sem (>= 3.1-0), MplusAutomation (>= 0.5-3), plyr, methods, XML, igraph (>= 0.6-3), lisrelToR, rockchalk, colorspace
 ByteCompile: yes
 Description:  Path diagrams and visual analysis of various SEM packages' output
 URL: https://github.com/SachaEpskamp/semPlot
