qgraph moved to imports list.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ importFrom(rockchalk,standardize)
 import(plyr)
 import(lisrelToR)
 import(XML)
+import(qgraph)
 export(semPlotModel_Onyx)
 export(semPlotModel_Amos)
 importFrom(igraph,"layout.reingold.tilford","graph.edgelist")
