--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,12 @@ Package: semPlot
 Type: Package
 Title: Path diagrams and visual analysis of various SEM packages' output
 Version: 0.3.2
-Date: 2013-01-31
+Date: 2013-02-21
 Author: Sacha Epskamp
 Maintainer: Sacha Epskamp <mail@sachaepskamp.com>
-Depends: R (>= 2.15.0), qgraph (>= 1.2)
+Depends: R (>= 2.15.0)
 Suggests: lavaan (>= 0.5-11), sem (>= 3.1-0), MplusAutomation (>= 0.5-3)
-Imports:  lavaan (>= 0.5-11), sem (>= 3.1-0), MplusAutomation (>= 0.5-3), plyr, methods, XML, igraph (>= 0.6-3), lisrelToR, rockchalk, colorspace
+Imports:  qgraph (>= 1.2), lavaan (>= 0.5-11), sem (>= 3.1-0), MplusAutomation (>= 0.5-3), plyr, methods, XML, igraph (>= 0.6-3), lisrelToR, rockchalk, colorspace
 ByteCompile: yes
 Description:  Path diagrams and visual analysis of various SEM packages' output
 URL: https://github.com/SachaEpskamp/semPlot
