--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,6 @@ import(XML)
 import(qgraph)
 export(semPlotModel_Onyx)
 export(semPlotModel_Amos)
-importFrom(igraph,"layout.reingold.tilford","graph.edgelist")
+importFrom(igraph,"layout.reingold.tilford","graph.edgelist","shortest.paths")
 importFrom(colorspace,rainbow_hcl)
 export(exo,"exo<-",endo,"endo<-",lat,"lat<-",man,"man<-")
