Dummy latent variables for manifest regressions in LISREL model are added to modelMatrices.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,3 +39,4 @@ export(semPlotModel_Amos)
 importFrom(igraph,"layout.reingold.tilford","graph.edgelist","shortest.paths")
 importFrom(colorspace,rainbow_hcl)
 export(exo,"exo<-",endo,"endo<-",lat,"lat<-",man,"man<-")
+importFrom(corpcor,"pseudoinverse")
