MplusAutomation to suggests list.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,12 +19,15 @@ S3method(semPlotModel,loadings)
 S3method(semPlotModel,lisrel)
 S3method(semPlotModel,factanal)
 S3method(semPlotModel,default)
-# S3method(semPlotModel,semspec)
 S3method(semPlotModel,mplus.model)
 S3method(semPlotModel,sem)
 S3method(semPlotModel,msem)
 S3method(semPlotModel,msemObjectiveML)
-importFrom(MplusAutomation,"readModels")
+export(semPlotModel_Onyx)
+export(semPlotModel_Amos)
+export(exo,"exo<-",endo,"endo<-",lat,"lat<-",man,"man<-")
+
+# importFrom(MplusAutomation,"readModels")
 importFrom(sem,"sem","standardizedCoefficients","specifyModel")
 importFrom(lavaan,"lavaan","cfa","standardizedSolution", "standardizedsolution", "parameterEstimates", "parameterestimates","inspect","lavaanNames")
 importClassesFrom(lavaan,"lavaan")
@@ -34,9 +37,6 @@ import(plyr)
 import(lisrelToR)
 import(XML)
 import(qgraph)
-export(semPlotModel_Onyx)
-export(semPlotModel_Amos)
 importFrom(igraph,"layout.reingold.tilford","graph.edgelist","shortest.paths")
 importFrom(colorspace,rainbow_hcl)
-export(exo,"exo<-",endo,"endo<-",lat,"lat<-",man,"man<-")
 importFrom(corpcor,"pseudoinverse")
