Actual CRAN 0.3.3 version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,7 +29,7 @@ export(exo,"exo<-",endo,"endo<-",lat,"lat<-",man,"man<-")
 
 # importFrom(MplusAutomation,"readModels")
 importFrom(sem,"sem","standardizedCoefficients","specifyModel")
-importFrom(lavaan,"lavaan","cfa","standardizedSolution", "standardizedsolution", "parameterEstimates", "parameterestimates","inspect","lavaanNames")
+importFrom(lavaan,"lavaan","cfa","standardizedSolution", "standardizedsolution", "parameterEstimates", "parameterestimates","inspect","lavaanNames","lavaanify")
 importClassesFrom(lavaan,"lavaan")
 importFrom(stats,"factanal")
 importFrom(rockchalk,standardize)
@@ -37,6 +37,7 @@ import(plyr)
 import(lisrelToR)
 import(XML)
 import(qgraph)
+import(methods)
 importFrom(igraph,"layout.reingold.tilford","graph.edgelist","shortest.paths")
 importFrom(colorspace,rainbow_hcl)
 importFrom(corpcor,"pseudoinverse")
