--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,14 @@
 Package: semPlot
 Type: Package
-Title: Path diagrams and visual analysis of various SEM packages' output
+Title: Path Diagrams and Visual Analysis of Various SEM Packages' Output
 Version: 1.1
-Date: 2014-08-15
-Author: Sacha Epskamp
+Author: Sacha Epskamp, with contributions from Simon Stuber
 Maintainer: Sacha Epskamp <mail@sachaepskamp.com>
 Depends: R (>= 2.15.0)
 Suggests: MplusAutomation (>= 0.5-3)
-Imports:  qgraph (>= 1.2.4), lavaan (>= 0.5-11), sem (>= 3.1-0), plyr, XML, igraph (>= 0.6-3), lisrelToR, rockchalk, colorspace, corpcor, methods
+Imports:  qgraph (>= 1.2.4), lavaan (>= 0.5-11), sem (>= 3.1-0), plyr, XML, igraph (>= 0.6-3), lisrelToR, rockchalk, colorspace, corpcor, methods, semTools, OpenMx
 ByteCompile: yes
-Description:  Path diagrams and visual analysis of various SEM packages' output
+Description: Path diagrams and visual analysis of various SEM packages' output.
 URL: https://github.com/SachaEpskamp/semPlot
 License: GPL-2
 LazyLoad: yes
