--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ exportClasses(
 
 # export Methods
 exportMethods(
-             "semPlotModel.S4"
+             "semPlotModel_S4"
            )
 
 S3method("+",semPlotModel)
@@ -38,6 +38,13 @@ import(lisrelToR)
 import(XML)
 import(qgraph)
 import(methods)
+import(OpenMx)
+import(semTools)
 importFrom(igraph,"layout.reingold.tilford","graph.edgelist","shortest.paths")
 importFrom(colorspace,rainbow_hcl)
 importFrom(corpcor,"pseudoinverse")
+ importFrom("grDevices", "col2rgb", "rainbow", "rgb")
+  importFrom("graphics", "lines", "par", "text")
+  importFrom("stats", "ave", "coef", "cov", "cov2cor", "loadings",
+             "median", "pnorm", "weighted.mean")
+  importFrom("utils", "packageDescription")
