--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,5 @@
-export(semPaths,semPlotModel,semCors,lisrelModel,ramModel,semSyntax,semMatrixAlgebra,modelMatrices,Imin,semPlotModel_lavaanModel)
+export(semPaths,semPlotModel,semCors,lisrelModel,ramModel,semSyntax,
+       semMatrixAlgebra,modelMatrices,Imin,semPlotModel_lavaanModel)
 
 # export Classes
 exportClasses(
