NAMESPACE updated to include package regsem

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ S3method(semPlotModel,mplus.model)
 S3method(semPlotModel,sem)
 S3method(semPlotModel,msem)
 S3method(semPlotModel,msemObjectiveML)
+export(semPlotModel_regsem)
 export(semPlotModel_Onyx)
 export(semPlotModel_Amos)
 export(exo,"exo<-",endo,"endo<-",lat,"lat<-",man,"man<-")
@@ -38,6 +39,7 @@ import(lisrelToR)
 import(XML)
 import(qgraph)
 import(methods)
+import(regsem)
 import(OpenMx)
 import(semTools)
 importFrom(igraph,"layout.reingold.tilford","graph.edgelist","shortest.paths")
