New update of namespace and adding of regsem latest version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ import(methods)
 import(regsem)
 import(OpenMx)
 import(semTools)
+import(dplyr)
 importFrom(igraph,"layout.reingold.tilford","graph.edgelist","shortest.paths")
 importFrom(colorspace,rainbow_hcl)
 importFrom(corpcor,"pseudoinverse")
