--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ importFrom(lavaan,"lavaan","cfa","standardizedSolution", "standardizedsolution",
 importClassesFrom(lavaan,"lavaan")
 importFrom(stats,"factanal")
 importFrom(rockchalk,standardize)
+import(MplusAutomation)
 import(plyr)
 import(lisrelToR)
 import(XML)
