--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,11 +23,11 @@ S3method(semPlotModel,mplus.model)
 S3method(semPlotModel,sem)
 S3method(semPlotModel,msem)
 S3method(semPlotModel,msemObjectiveML)
-export(semPlotModel_regsem)
 export(semPlotModel_Onyx)
-export(semPlotModel_cvregsem)
 export(semPlotModel_Amos)
 export(exo,"exo<-",endo,"endo<-",lat,"lat<-",man,"man<-")
+S3method(semPlotModel,regsemplot)
+S3method(semPlotModel,cvregsemplot)
 
 # importFrom(MplusAutomation,"readModels")
 importFrom(sem,"sem","standardizedCoefficients","specifyModel")
@@ -35,6 +35,7 @@ importFrom(lavaan,"lavaan","cfa","standardizedSolution", "standardizedsolution",
 importClassesFrom(lavaan,"lavaan")
 importFrom(stats,"factanal")
 importFrom(rockchalk,standardize)
+importFrom(regsem, "regsem","cv_regsem")
 import(plyr)
 import(lisrelToR)
 import(XML)
