--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,8 +27,8 @@ S3method(semPlotModel,msemObjectiveML)
 export(semPlotModel_Onyx)
 export(semPlotModel_Amos)
 export(exo,"exo<-",endo,"endo<-",lat,"lat<-",man,"man<-")
-S3method(semPlotModel,regsemplot)
-S3method(semPlotModel,cvregsemplot)
+S3method(semPlotModel,regsem)
+S3method(semPlotModel,cvregsem)
 
 # importFrom(MplusAutomation,"readModels")
 importFrom(sem,"sem","standardizedCoefficients","specifyModel")
@@ -52,3 +52,5 @@ importFrom(corpcor,"pseudoinverse")
   importFrom("stats", "ave", "coef", "cov", "cov2cor", "loadings",
              "median", "pnorm", "weighted.mean")
   importFrom("utils", "packageDescription")
+  
+  
