--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ importFrom(lavaan,"lavaan","cfa","standardizedSolution", "standardizedsolution",
 importClassesFrom(lavaan,"lavaan")
 importFrom(stats,"factanal")
 importFrom(rockchalk,standardize)
+importFrom(lm.beta,lm.beta)
 #importFrom(regsem, "regsem","cv_regsem")
 import(plyr)
 import(lisrelToR)
@@ -52,5 +53,4 @@ importFrom(corpcor,"pseudoinverse")
   importFrom("stats", "ave", "coef", "cov", "cov2cor", "loadings",
              "median", "pnorm", "weighted.mean")
   importFrom("utils", "packageDescription")
-  
-  
+
