Removed rockchalk because lme4 was failing. Do not merge this into main.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,7 +35,7 @@ importFrom(sem,"sem","standardizedCoefficients","specifyModel")
 importFrom(lavaan,"lavaan","cfa","standardizedSolution", "standardizedsolution", "parameterEstimates", "parameterestimates","inspect","lavaanNames","lavaanify","lavInspect","lavTech")
 importClassesFrom(lavaan,"lavaan")
 importFrom(stats,"factanal")
-importFrom(rockchalk,standardize)
+#importFrom(rockchalk,standardize)
 #importFrom(regsem, "regsem","cv_regsem")
 import(plyr)
 import(lisrelToR)
